# vcoding

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
doc/: cli.md
examples/: 01_code_generation.py  01_simple_oneshot_api.py  02_context_manager_api.py  03_advanced_api.py  03_langchain_api.py  README.md  basic_usage.py  context_manager.py  generate_templates.py  git_workflow.py  langchain_tools.py  run_claudecode.py  run_copilot.py  sync_files.py
src/vcoding/: __init__.py  __main__.py  cli.py  functions.py  langchain.py  mcp.py
src/vcoding/agents/: __init__.py  base.py  claudecode.py  copilot.py
src/vcoding/core/: __init__.py  config.py  constant.py  env.py  manager.py  paths.py  types.py
src/vcoding/ssh/: __init__.py  client.py  keys.py
src/vcoding/templates/: __init__.py  dockerfile.py  gitignore.py
src/vcoding/templates/files/: Dockerfile.claudecode.j2  Dockerfile.extension.j2  Dockerfile.go.j2  Dockerfile.j2  Dockerfile.java.j2  Dockerfile.nodejs.j2  Dockerfile.python.j2  (+1 more)
src/vcoding/virtualization/: __init__.py  base.py  docker.py
src/vcoding/workspace/: __init__.py  git.py  workspace.py
tests/: __init__.py  conftest.py  test_cli.py  test_functions.py  test_langchain.py
tests/agents/: test_base.py  test_claudecode.py  test_copilot.py
tests/core/: test_config.py  test_manager.py  test_paths.py  test_types.py
tests/ssh/: __init__.py  test_client.py  test_keys.py
tests/templates/: test_dockerfile.py  test_gitignore.py
tests/virtualization/: __init__.py  test_base.py  test_docker.py
tests/workspace/: test_git.py  test_workspace.py
