[project]
name = "vcoding"
version = "0.1.0"
description = "Virtualized development environment orchestration tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.0",
    "docker>=7.1.0",
    "gitpython>=3.1.46",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.3.0"]

[project.scripts]
vcoding = "vcoding:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
    "types-docker>=7.1.0.20260109",
]
langchain = [
    "langchain>=1.2.4",
]
